--- a/tsconfig.json
+++ b/tsconfig.json
@@ -107,6 +107,7 @@
         /* Completeness */
         // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
         "skipLibCheck": true /* Skip type checking all .d.ts files. */,
+        "ignoreDeprecations": "6.0", /* Ignore deprecation warnings in this version and below. */
         "baseUrl": ".",
         "paths": {
             "@/*": ["./resources/js/*"]
